[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Keybinds.gd" type="Script" id=1]

[node name="Keybinds" type="Control"]
margin_right = 464.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Paper" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 464.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REBIND KEYS"
align = 1
valign = 1

[node name="SettingsBox" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -550.0
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftColumn" type="Control" parent="SettingsBox"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -500.0
margin_right = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_up" type="Control" parent="SettingsBox/LeftColumn"]
margin_right = 175.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/ui_up"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 61.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/ui_up"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_left" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 50.0
margin_right = 175.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/ui_left"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 71.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU LEFT"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/ui_left"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="move_forward" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 100.0
margin_right = 175.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/move_forward"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 108.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MOVE FORWARD"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/move_forward"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="turn_left" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 150.0
margin_right = 175.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/turn_left"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 67.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TURN LEFT"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/turn_left"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="turn_right" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 200.0
margin_right = 175.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/turn_right"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 79.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TURN RIGHT"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/turn_right"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="look" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 250.0
margin_right = 175.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/look"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 57.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LOOK AT"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/look"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="yes" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 300.0
margin_right = 175.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/yes"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SAY YES"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/yes"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="settings" type="Control" parent="SettingsBox/LeftColumn"]
margin_top = 350.0
margin_right = 175.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/LeftColumn/settings"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 100.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPEN SETTINGS"

[node name="Button" type="Button" parent="SettingsBox/LeftColumn/settings"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="RightColumn" type="Control" parent="SettingsBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_down" type="Control" parent="SettingsBox/RightColumn"]
margin_right = 175.0
margin_bottom = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/ui_down"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 87.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU DOWN"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/ui_down"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="ui_right" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 50.0
margin_right = 175.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/ui_right"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 83.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU RIGHT"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/ui_right"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="ui_accept" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 100.0
margin_right = 175.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/ui_accept"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 104.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MENU CONFIRM"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/ui_accept"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="quit" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 150.0
margin_right = 175.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/quit"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/quit"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="ping" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 200.0
margin_right = 175.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/ping"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 70.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PING AREA"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/ping"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="talk" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 250.0
margin_right = 175.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/talk"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 40.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "TALK"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/talk"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="no" type="Control" parent="SettingsBox/RightColumn"]
margin_top = 300.0
margin_right = 175.0
margin_bottom = 350.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="SettingsBox/RightColumn/no"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 48.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SAY NO"

[node name="Button" type="Button" parent="SettingsBox/RightColumn/no"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -10.0
margin_bottom = 10.0

[node name="BackButton" type="Control" parent="SettingsBox"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -207.5
margin_top = -50.0
margin_right = 207.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="SettingsBox/BackButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 50.0
margin_bottom = 25.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
action_mode = 0
text = "BACK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SettingsBox/LeftColumn/ui_up/Button" to="." method="_on_menu_up_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/ui_left/Button" to="." method="_on_menu_left_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/move_forward/Button" to="." method="_on_move_forward_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/turn_left/Button" to="." method="_on_turn_left_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/turn_right/Button" to="." method="_on_turn_right_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/look/Button" to="." method="_on_look_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/yes/Button" to="." method="_on_say_yes_pressed"]
[connection signal="pressed" from="SettingsBox/LeftColumn/settings/Button" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/ui_down/Button" to="." method="_on_menu_down_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/ui_right/Button" to="." method="_on_menu_right_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/ui_accept/Button" to="." method="_on_menu_confirm_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/quit/Button" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/ping/Button" to="." method="_on_ping_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/talk/Button" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="SettingsBox/RightColumn/no/Button" to="." method="_on_say_no_pressed"]
[connection signal="pressed" from="SettingsBox/BackButton/Button" to="." method="_on_Button_pressed"]
